--- a/package.json
+++ b/package.json
@@ -6,20 +6,32 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "npx ts-node ./src/index.ts"
+    "start": "npx ts-node ./src/index.ts",
+    "starttest": "npx ts-node ./src/test.ts",
+    "gplay": "npx ts-node ./src/gplay.ts",
+    "gplay-sdk": "npx ts-node ./src/gplay-sdk.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@greymass/anchor-link-session-manager": "^0.4.0",
+    "@greymass/miniaes": "^1.0.0",
     "@wharfkit/contract": "^1.1.5",
     "@wharfkit/session": "^1.3.1",
     "@wharfkit/transact-plugin-resource-provider": "^1.1.1",
     "@wharfkit/wallet-plugin-privatekey": "^1.1.0",
-    "dotenv": "^16.4.5"
+    "anchor-link": "^3.6.0",
+    "axios": "^1.7.5",
+    "dotenv": "^16.4.5",
+    "eosio-signing-request": "^2.5.3",
+    "google-auth-library": "^9.14.0",
+    "googleapis": "^142.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.1.0",
+    "@types/axios": "^0.14.0",
+    "@types/node": "^22.5.0",
+    "tsx": "^4.19.0",
     "typescript": "^5.5.3"
   }
 }
